[gd_scene load_steps=4 format=3 uid="uid://beer7ipemffei"]

[ext_resource type="Script" uid="uid://3i8an86stp5u" path="res://game/components/room/room.gd" id="1_tld6s"]
[ext_resource type="Texture2D" uid="uid://brege0yocdp4" path="res://game/textures/orange.png" id="2_qxsdh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gv5m4"]
albedo_texture = ExtResource("2_qxsdh")
uv1_triplanar = true

[node name="Room" type="Node3D"]
script = ExtResource("1_tld6s")
room_size = Vector2(30, 40)

[node name="Ground" type="CSGBox3D" parent="." groups=["navmesh"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(30, 1, 40)
material = SubResource("StandardMaterial3D_gv5m4")

[node name="WallNorth" type="CSGBox3D" parent="." groups=["navmesh"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 20.5)
use_collision = true
size = Vector3(32, 5, 1)
material = SubResource("StandardMaterial3D_gv5m4")

[node name="WallSouth" type="CSGBox3D" parent="." groups=["navmesh"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -20.5)
use_collision = true
size = Vector3(32, 5, 1)
material = SubResource("StandardMaterial3D_gv5m4")

[node name="WallEast" type="CSGBox3D" parent="." groups=["navmesh"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5, 1.5, 0)
use_collision = true
size = Vector3(1, 5, 40)
material = SubResource("StandardMaterial3D_gv5m4")

[node name="WallWest" type="CSGBox3D" parent="." groups=["navmesh"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.5, 1.5, 0)
use_collision = true
size = Vector3(1, 5, 40)
material = SubResource("StandardMaterial3D_gv5m4")
